tests/typechecker/fail/033-exhaustive-pattern-matching.hyg
// An optional integer value.
type OptionalInt = union {
    Some: int;
    None: unit
};

fun double(o: OptionalInt): unit =
    match o with {
        // type of continuation expression does not match type of whole matching expression
        Some{x} -> x * 2;
        None{_} -> ()
    };

double(Some{2})